Fix spacing and remove button with no URL

--- a/src/components/Solutions/Sections/Testimonial/styles.module.less
+++ b/src/components/Solutions/Sections/Testimonial/styles.module.less
@@ -13,6 +13,10 @@
   border-radius: 20px;
   padding: 40px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
 
   h3 {
     color: var(--blue);
@@ -32,14 +36,14 @@
   p {
     font-size: 1rem;
     line-height: 30px;
+    margin: 0;
   }
 
   a {
-    margin: auto;
+    width: 100%;
   }
 
   img {
-    padding: 24px;
     max-height: 200px;
   }
 
